--- a/portfolio.html
+++ b/portfolio.html
@@ -59,7 +59,7 @@
       <div class="topnav">
         <nav>
           <a
-            href="http://127.0.0.1:5500/index.html"
+            href="index.html"
             style="display: inline-block; margin-right: 20px"
           >
             <h3>Home</h3></a
@@ -83,13 +83,13 @@
       </div>
       <div class="language">
         <a
-          href="http://127.0.0.1:5500/index.html"
+          href="index.html"
           style="display: inline-block"
         >
           <h3>EN</h3></a
         >
         <a
-          href="http://127.0.0.1:5500/index.html"
+          href="index.html"
           style="display: inline-block; margin-right: 7px"
         >
           <h3>DE</h3></a
