About me text updated

--- a/index.html
+++ b/index.html
@@ -221,21 +221,13 @@
               "
             >
               <p>
-                So far - life is a journey. It goes up and down, with falling
-                and rising again.
+                So far - life is a journey. It goes up and down, with falling and rising, leaving things behind and welcome new things.
               </p>
               <p>
-                Being 40 years old and working for 15 years as an engineer in a
-                big German company developing technical products, I finally
-                found something, what I was always searching for. It is freedom
-                and endless opportunities in creating pictures of things I see
-                on our beautiful planet.
+                After working for 15 years as an Engineering in a technical environment, I also improved my skills in photography.
               </p>
               <p>
-                I respect engeneering - my problems are the limititations given
-                by physical principles and other boundaries. But photography has
-                been the eye opener. The are no limitations for moments. It is
-                on us to appriciate this and capture them.
+                The endless opportunities to capture unforgettable moments, to make people happy with the results and having fun in this process is the reason I can say I found my purpose in photography.
               </p>
               <p></p>
               <!--<p>And now I am a husband of a cute little baby chicken.</p>-->
