rename picture in folder, delete commented code

--- a/portfolio.html
+++ b/portfolio.html
@@ -98,28 +98,6 @@
     </header>
     <br />
       <p style="margin: 0px; margin-top: 100px; text-align: center;font-family: Amiri; font-size: 60px; color: white;">PORTFOLIO</p>
-    
-    <!--
-<div class="container">
-      <img
-        src="images/German-Maria/DSC07280(2).jpg"
-        alt="German-Maria"
-        style="width: 90%; padding-left: 10%"
-      />
-<div
-        style="
-          position: absolute;
-          font-family: Allura;
-          font-size: 50px;
-          color: rgb(60, 60, 60);
-          top: 25%;
-          left: 50%;
-          transform: translate(-50%, -50%);
-        "
-      >
-        Because love has no end.
-      </div>
-     -->
 
     </div>
     <section class="portfolios" style="width: 100%; text-align: center;">
@@ -138,7 +116,7 @@
         <a href="" >Portrait </a>
         <img
           class="image"
-          src="images/portrait/_DSC8532.jpg"
+          src="images/portrait/DSC8532.jpg"
           alt=""
           style="object-fit: cover; height: 100%; margin-left: -200px; z-index: 1"/>
       </div>
