Change backfground and p color, remove unused code

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         background-image: url("images/ring.jpg");
         background-size: 100%;
         background-repeat: no-repeat;
-        background-color: rgb(49, 49, 49);
+        background-color: #fef9e7;
       }
       header {
         padding-bottom: 57%;
@@ -194,7 +194,7 @@
         <p
           style="
             text-align: center;
-            color: white;
+            color: black;
             margin: 60px;
             font-family: Courier New, monospace;
             font-size: 40px;
@@ -216,7 +216,7 @@
               style="
                 padding-left: 30px;
                 font-family: Urbanist, sans-serif;
-                color: white;
+                color: black;
                 font-size: 22px;
               "
             >
