--- a/portfolio.html
+++ b/portfolio.html
@@ -16,10 +16,11 @@
     <script src="myscripts.js"></script>
     <style>
       body {
-        background-color: rgb(100, 100, 100);
+        background-color: #fef9e7;
       }
-      .topnav {
-        background-color: rgba(58, 58, 58, 0.6);
+      .topnav a,
+      .language a {
+        color: black;
       }
       .container{
         width: 450px;
@@ -59,7 +60,7 @@
       <div class="topnav">
         <nav>
           <a
-            href="index.html"
+            href="/index.html"
             style="display: inline-block; margin-right: 20px"
           >
             <h3>Home</h3></a
@@ -82,22 +83,15 @@
         </nav>
       </div>
       <div class="language">
-        <a
-          href="index.html"
-          style="display: inline-block"
-        >
-          <h3>EN</h3></a
-        >
-        <a
-          href="index.html"
-          style="display: inline-block; margin-right: 7px"
-        >
+        <a href="index.html" style="display: inline-block"> <h3>EN</h3></a>
+
+        <a href="index.html" style="display: inline-block; margin-right: 7px">
           <h3>DE</h3></a
         >
       </div>
     </header>
     <br />
-      <p style="margin: 0px; margin-top: 100px; text-align: center;font-family: Amiri; font-size: 60px; color: white;">PORTFOLIO</p>
+      <p style="margin: 0px; margin-top: 100px; text-align: center;font-family: Amiri; font-size: 60px; color: black;">PORTFOLIO</p>
 
     </div>
     <section class="portfolios" style="width: 100%; text-align: center;">
@@ -130,46 +124,6 @@
         />
       </div>
     </section>
-    <!--
-<section>
-      <p>German & Maria</p>
-      <div>
-        
-
-        <img
-          src="images/German-Maria/DSC06702.jpg"
-          alt=""
-          style="height: 600px"
-        />
-
-        <img
-          src="images/German-Maria/DSC08585.jpg"
-          alt=""
-          style="height: 600px"
-        />
-      </div>
-    </section>
-    <section>
-      <p>Alex & Meike</p>
-      <div>
-        <img
-          src="images/meike-alex/DSC02898.jpg"
-          alt=""
-          style="height: 600px"
-        />
-        <img
-          src="images/meike-alex/DSC02937.jpg"
-          alt=""
-          style="height: 600px"
-        />
-        <img
-          src="images/meike-alex/DSC03149.jpg"
-          alt=""
-          style="height: 600px"
-        />
-      </div>
-    </section>
-    -->
   </body>
   <footer>
     <div
