--- a/about_me.html
+++ b/about_me.html
@@ -29,39 +29,7 @@
   </head>
 
   <body>
-    <header>
-      <div class="topnav">
-        <nav>
-          <a
-            href="index.html"
-            style="display: inline-block; margin-right: 20px"
-          >
-            <h3>Home</h3></a
-          >
-          <a
-            href="about_me.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>About us</h3></a
-          >
-          <a
-            href="contact.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>Contact</h3></a
-          >
-          <a
-            href="portfolio.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>Portfolio</h3></a
-          >
-        </nav>
-      </div>
-      <div class="language">
-        <a href="index.html" style="display: inline-block"> <h3>EN</h3></a>
-        <a href="index.html" style="display: inline-block; margin-right: 7px">
-          <h3>DE</h3></a
-        >
-      </div>
-    </header>
+    <header-component></header-component>
     <section>
       <div
         style="
@@ -118,6 +86,7 @@
         </div>
       </div>
     </section>
+    <script src="./header_footer.js"></script>
   </body>
 
   <footer>
