--- a/index.html
+++ b/index.html
@@ -15,15 +15,17 @@
       rel="stylesheet"
     />
     <script src="myscripts.js"></script>
+    <script src="./header_footer.js"></script>
+
     <style>
       body {
         background-image: url("images/ring.jpg");
-        background-size: 100%;
+        background-size: cover;
         background-repeat: no-repeat;
         background-color: #fef9e7;
       }
       header {
-        padding-bottom: 57%;
+        padding-bottom: 47%;
       }
       .bigname {
         color: white;
@@ -72,35 +74,6 @@
         background: lightgrey;
         color: black;
       }
-      #sidenav {
-        background-color: rgba(134, 134, 134, 0.2);
-        position: fixed; /* Make it stick/fixed */
-        left: 0;
-        top: 0;
-        height: 100%;
-        transition: 0.6s;
-        align-items: center;
-        text-align: center;
-      }
-
-      #sidenav a {
-        float: left;
-        display: block;
-        color: black;
-        padding: 15px;
-        text-decoration: none;
-        transition: 0.5s;
-        font-size: 20px;
-        font-family: Bellota Text;
-        position: fixed;
-        top: 50%;
-        transform: translateY(-50%);
-      }
-
-      #sidenav a:hover {
-        background-color: #ddd;
-        color: black;
-      }
       footer {
         margin-top: 20px;
       }
@@ -139,39 +112,38 @@
 
   <body>
     <header>
-      <div class="topnav">
-        <nav>
-          <a
-            href="index.html"
-            style="display: inline-block; margin-right: 20px"
-          >
-            <h3>Home</h3></a
-          >
-          <a
-            href="about_me.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>About us</h3></a
-          >
-          <a
-            href="contact.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>Contact</h3></a
-          >
-          <a
-            href="portfolio.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>Portfolio</h3></a
-          >
-        </nav>
+      <header-component-index></header-component-index>
+      <!-- <div class="topnav">
+        <a
+          href="index.html"
+          style="display: inline-block; margin-right: 20px"
+        >
+          <h3>Home</h3></a
+        >
+        <a
+          href="about_me.html"
+          style="display: inline-block; margin-right: 20px"
+          ><h3>About us</h3></a
+        >
+        <a
+          href="contact.html"
+          style="display: inline-block; margin-right: 20px"
+          ><h3>Contact</h3></a
+        >
+        <a
+          href="portfolio.html"
+          style="display: inline-block; margin-right: 20px"
+          ><h3>Portfolio</h3></a
+        >
       </div>
 
       <div class="language">
         <a href="index.html" style="display: inline-block"> <h3>EN</h3></a>
-        <!--<span style="color: lemonchiffon; display: inline-block">&#124;</span>-->
+        <span style="color: lemonchiffon; display: inline-block">&#124;</span>
         <a href="index.html" style="display: inline-block; margin-right: 7px">
           <h3>DE</h3></a
         >
-      </div>
+      </div>-->
 
       <div class="bigname">
         <p
@@ -189,7 +161,6 @@
       </div>
     </header>
     <main>
-      <article></article>
       <section id="about-johann">
         <p
           style="
@@ -208,10 +179,6 @@
             <img src="images/Johann/johann.jpg" alt="Johann" width="100%" />
           </div>
           <div class="main">
-            <!--<h1 style="padding: 0px 30px; font-size: 40px">
-                A traveller, a nature lover, <br />
-                a photographer
-              </h1>-->
             <div
               style="
                 padding-left: 30px;
@@ -229,8 +196,6 @@
               <p>
                 The endless opportunities to capture unforgettable moments, to make people happy with the results and having fun in this process is the reason I can say I found my purpose in photography.
               </p>
-              <p></p>
-              <!--<p>And now I am a husband of a cute little baby chicken.</p>-->
             </div>
             <button id="aboutme-btn" onclick="location.href='about_me.html'">
               More about me
