--- a/portfolio.html
+++ b/portfolio.html
@@ -56,40 +56,7 @@
   </head>
 
   <body>
-    <header>
-      <div class="topnav">
-        <nav>
-          <a
-            href="/index.html"
-            style="display: inline-block; margin-right: 20px"
-          >
-            <h3>Home</h3></a
-          >
-          <a
-            href="about_me.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>About us</h3></a
-          >
-          <a
-            href="contact.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>Contact</h3></a
-          >
-          <a
-            href="portfolio.html"
-            style="display: inline-block; margin-right: 20px"
-            ><h3>Portfolio</h3></a
-          >
-        </nav>
-      </div>
-      <div class="language">
-        <a href="index.html" style="display: inline-block"> <h3>EN</h3></a>
-
-        <a href="index.html" style="display: inline-block; margin-right: 7px">
-          <h3>DE</h3></a
-        >
-      </div>
-    </header>
+    <header-component></header-component>
     <br />
       <p style="margin: 0px; margin-top: 100px; text-align: center;font-family: Amiri; font-size: 60px; color: black;">PORTFOLIO</p>
 
@@ -124,6 +91,8 @@
         />
       </div>
     </section>
+    <script src="./header_footer.js"></script>
+
   </body>
   <footer>
     <div
