--- a/contact.html
+++ b/contact.html
@@ -16,19 +16,12 @@
     <script src="myscripts.js"></script>
     <script src="header_footer.js" type="text/javascript" defer></script>
     <style>
-      body {
-        background-color: #fef9e7;
-      }
-      footer {
+      /* footer {
         background-color: rgba(134, 134, 134, 0.2);
-      }
-      .topnav a,
-      .language a {
-        color: black;
-      }
+      } */
       .contact-title {
         font-family: Bellota Text;
-        font-size: 28px;
+        font-size: 20px;
       }
       .other-contact {
         font-family: Bellota Text;
@@ -39,7 +32,8 @@
   </head>
   <body>
     <header-component></header-component>
-      <div style="display: flex; flex-wrap: wrap; margin-top: 80px">
+    <main>
+      <div style="display: flex; flex-wrap: wrap">
       <div style="flex: 45%">
         <img
           src="images/German-Maria/DSC07320.jpg"
@@ -76,7 +70,7 @@
             <input type="date" name="date" id="date" />
             <br />
             <label for="More info" class="contact-title">More info</label>
-            <textarea name="info" id="info" style="height: 200px"></textarea>
+            <textarea name="info" id="info" style="height: 150px"></textarea>
 
             <input
               type="submit"
@@ -115,95 +109,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </main>
     <footer-component></footer-component>
-    <script src="header_footer.js"></script>
   </body>
-  <!--<footer>
-    <div
-      style="
-        position: absolute;
-        margin-left: 50%;
-        transform: translate(-50%, 0%);
-        border-bottom: 10px;
-      "
-    >
-      <button onclick="topFunction()" id="top-btn" title="Go to top">
-        Back to top
-      </button>
-    </div>
-
-    <br />
-
-    <div class="wrapper">
-      <!-- Trigger/Open The Modal -->
-      <button
-        onclick="modalFunction()"
-        class="modal-button"
-        href="#daten_modal"
-      >
-        Datenschutzerklärung
-      </button>
-      <!-- Trigger/Open The Modal -->
-      <button onclick="modalFunction()" class="modal-button" href="#imp_modal">
-        Impressum
-      </button>
-    </div>
-
-    <!-- The Modal -->
-    <div id="daten_modal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <span
-            onclick="closeFunction()"
-            class="close"
-            data-target="#daten_modal"
-            >&times;</span
-          >
-          <h2>Datenschutzerklärung</h2>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-footer">
-          <h3>Modal Footer</h3>
-        </div>
-        <p>Some text in the datenschutz..</p>
-      </div>
-    </div>
-    <!-- The Modal -->
-    <div id="imp_modal" class="modal">
-      <!-- Modal content -->
-      <div class="modal-content">
-        <div class="modal-header">
-          <span onclick="closeFunction()" class="close" data-target="#imp_modal"
-            >&times;</span
-          >
-          <h2>Impressum</h2>
-        </div>
-        <div class="modal-body">
-          <p>Some text in the Modal Body</p>
-          <p>Some other text...</p>
-        </div>
-        <div class="modal-footer">
-          <h3>Modal Footer</h3>
-        </div>
-        <p>Some text in the Impressum..</p>
-      </div>
-    </div>
-
-    <p
-      style="
-        position: absolute;
-        margin-left: 50%;
-        transform: translate(-50%, 0%);
-        padding-top: 70px;
-        font-family: Work Sans, sans-serif;
-      "
-    >
-      Johann Mai Fotografie | 74223 Flein | johannmai@icloud.com
-    </p>
-  </footer>-->
 </html>
