--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
         .about-column-left,
         .about-column-right {
           width: 100%;
+          padding: none;
         }
       }
       .image {
@@ -146,7 +147,7 @@
             text-align: center;
             color: black;
             margin: 60px;
-            font-family: Garamond, sans-serif;
+            font-family: Garamond, serif;
             font-size: 40px;
           "
         >
