21 - subtle change of the color

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
             <div
               style="
                 padding-left: 30px;
-                font-family: Urbanist, sans-serif;
+                font-family: Bellota Text;
                 color: black;
                 font-size: 22px;
               "
