21: Change header nav

--- a/about_me.html
+++ b/about_me.html
@@ -33,16 +33,17 @@
           margin-top: 50px;
           margin-left: 10%;
           margin-right: 10%;
+          background-color: #C3C1B3;
         "
       >
-        <div style="flex: 45%">
+        <div style="flex: 50%">
           <div>
             <img src="images/Johann/DSC09992.jpg" alt="Johann" width="100%" />
           </div>
         </div>
-        <div style="flex: 35%; padding-left: 5%">
-          <p style="font-size: 70px; font-family: Garamond, serif">
-            Hi friends
+        <div style="flex: 50%; padding-left: 5%">
+          <p style="font-size: 60px; font-family: Garamond, serif">
+            Herzlich willkommen
           </p>
           <div style="font-size: 24px; font-family: Bellota Text">
             <p>
@@ -51,6 +52,27 @@
             </p>
           </div>
         </div>
+      </div>
+    </section>
+    <section 
+        style="
+        display: flex;
+        flex-wrap: wrap;
+        margin-left: 10%;
+        margin-right: 10%;
+      "
+      >
+      <div style="flex: 30%">
+        <p style="font-size: 60px; font-family: Garamond, serif">
+          Fun facts
+        </p>
+      </div>
+      <div style="flex: 70%">
+        <ul style="font-size: 24px; font-family: Bellota Text">
+          <li> I did my own wedding pictures</li>
+          <li> I have two cats</li>
+          <li> I like chocolate</li>
+        </ul>
       </div>
     </section>
     <!-- <section>
